Remove obsolete runtime paths and redundant service interfaces